# SAELens

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  LICENSE  README.md  TEMPORAL_SAE_INTEGRATION_SUMMARY.md  activation_storing.py  baidicoot_othello_gpt.ipynb  bilal_othello.py  can_create_ravel_instance.ipynb  can_run_benchmark.ipynb  check_open_ai_sae_metrics.ipynb  codecov.yaml  dev.ipynb  eleuther_dev.ipynb  eval_metrics_resid_mid_oai.csv  evaluating.ipynb  exercises_and_solutions.ipynb  generate_sae_table.py  gpt2_resid_pre10_predict_pronoun_feature.html  hack_day_analysis.ipynb  index.html  latest  lp_sae_training.py  make_eval_visualisations.ipynb  make_hf_repo.sh  makefile  mkdocs.yml  neel_plotly.py  neel_scratch.py  objects.inv  open_ai_script.py  othello.py  othello_utils.py  othellogpt.ipynb  othellogpt_board_analysis.ipynb  (+21 more)
.github/: PULL_REQUEST_TEMPLATE.md
api/: index.html
assets/: saetable.css
benchmark/: bench_fwd_perf.py  test_activations_store.py  test_cache_activations_runner.py  test_eval_all_loadable_saes.py  test_language_model_sae_runner.py  test_language_model_sae_runner_multiple_devices.py
citation/: index.html
cluster/: Dockerfile  Dockerfile_py312  Makefile  launcher.py  sae_lens.def  train_gated_sae.qsub.sh  train_sae.qsub.beaker.sh
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: api.md  citation.md  contributing.md  custom_saes.md  feature_dashboards.md  generate_sae_table.py  importable_saes.md  index.md  installation.md  migrating.md  roadmap.md  sae_table.md  training_saes.md
experiments/: run_train_transcoder.py
feature_dashboards/: index.html
pre-release/: 404.html  generate_sae_table.py  index.html  objects.inv  sitemap.xml
reference/: index.html
research/: copy_suppression_sae_investigation.ipynb  dev.ipynb  generate_dashboards.py  gpt2_small_feature_analysis.ipynb  my_gpt2_small_analysis.ipynb  run.ipynb  sae_dashboard_improvement.ipynb  temp_file_3.html  wednesday_cs_sprint.py
roadmap/: index.html
sae_analysis/: dashboard_runner.py  feature_statistics.py  neuronpedia_runner.py  toolkit.py  tsea.py
sae_lens/: __init__.py  api.py  cache_activations_runner.py  config.py  constants.py  crosscoder_sae.py  dashboard_runner.py  evals.py  llm_sae_training_runner.py  load_model.py  pretokenize_runner.py  pretrained_saes.yaml  registry.py  regsitry.py  sae.py  sae_training_runner.py  tokenization_and_batching.py  toy_model_runner.py  transcoder.py  util.py
sae_table/: index.html
sae_training/: SAE.py  activation_store.py  activations_buffer.py  activations_store.py  cache_activations_runner.py  config.py  evals.py  gather_activations.py  geometric_median.py  lm_datasets.py  lm_runner.py  optim.py  sae_group.py  sparse_autoencoder.py  timeit.py  toy_model_runner.py  toy_models.py  train_sae.py  train_sae_on_language_model.py  train_sae_on_toy_model.py  utils.py
scripts/: acausal_crosscoder.py  caching_replication_how_train_saes.py  config.py  gated_sae_benchmark.py  generate_dashboards.py  global_acausal_crosscoder.py  huggingface_sae_sync.py  joseph_curt_pairing_gemma_scope_saes.ipynb  replication_how_train_SAEs.ipynb  replication_how_train_saes.py  replication_how_train_saes_caching.py  replication_how_train_saes_control.py  run.ipynb  sweep-gpt2-blocks.py  sweep-gpt2.py  test-autocast-lm.py  train_gated_sae.py  train_regular_sae.py  training_a_sparse_autoencoder_othelloGPT.py  wandb_to_hf.ipynb
search/: search_index.json
src/: activation_store.py  train_sae.py
tests/: conftest.py  helpers.py  run_gpt2_evals.py  test_cache_activations_runner.py  test_evals.py  test_llm_sae_training_runner.py  test_pretokenize_runner.py  test_registry.py  test_util.py
training_saes/: index.html
tutorials/: HookedSAETransformerDemo.ipynb  Hooked_SAE_Transformer_Demo.ipynb  basic_loading_and_analysing.ipynb  evaluating_saes_with_sae_lens_evals.ipynb  evaluating_your_sae.ipynb  exercises_and_solutions.ipynb  featurematch_cross_sae.ipynb  generating_neuronpedia_outputs.ipynb  generating_sae_dashboards.ipynb  loading_and_analysing_llama3_eai.ipynb  loading_normalized_sae.ipynb  loading_tanh_sae.ipynb  logits_lens_with_features.ipynb  mamba_train_example.py  mats_workshop_october_2024.ipynb  pretokenizing_datasets.ipynb  test_loading_llama_8b_distill.ipynb  training_a_gated_sae.ipynb  training_a_sparse_autoencoder.ipynb  training_an_mlp_transcoder.ipynb  tutorial_2_0.ipynb  uploading_saes_to_huggingface.ipynb  using_an_sae_as_a_steering_vector.ipynb  using_hooked_sae_transformer.ipynb
v5.10.5/: 404.html  index.html  sitemap.xml
v5.10.6/: 404.html  index.html  sitemap.xml
v5.10.7/: 404.html  index.html  sitemap.xml
v5.11.0/: 404.html  generate_sae_table.py  index.html  sitemap.xml
v6.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v6.1.0/: 404.html  index.html  sitemap.xml
v6.11.0/: 404.html  index.html  sitemap.xml
v6.11.1/: 404.html  index.html  sitemap.xml
v6.12.0/: 404.html  generate_sae_table.py  index.html  sitemap.xml
v6.12.1/: 404.html  index.html  sitemap.xml
v6.12.3/: 404.html  index.html  sitemap.xml
v6.13.0/: 404.html  index.html  sitemap.xml
v6.13.1/: 404.html  index.html  objects.inv  sitemap.xml
v6.14.0/: 404.html  index.html  sitemap.xml
v6.14.1/: 404.html  index.html  sitemap.xml
v6.14.2/: 404.html  index.html  objects.inv  sitemap.xml
v6.15.0/: 404.html  index.html  sitemap.xml
v6.16.0/: 404.html  index.html  sitemap.xml
v6.16.2/: 404.html  index.html  sitemap.xml
v6.16.3/: 404.html  index.html  sitemap.xml
v6.17.0/: 404.html  generate_sae_table.py  index.html  objects.inv  sitemap.xml
v6.2.0/: 404.html  index.html  sitemap.xml
v6.3.0/: 404.html  index.html  sitemap.xml
v6.3.1/: 404.html  index.html  sitemap.xml
v6.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v6.5.0/: 404.html  index.html  sitemap.xml
v6.5.1/: 404.html  index.html  sitemap.xml
v6.5.2/: 404.html  index.html  sitemap.xml
v6.5.3/: 404.html  index.html  sitemap.xml
v6.6.4/: 404.html  index.html  (+1 more)
(+626 files in other folders)
